fix quote in readme

--- a/README.org
+++ b/README.org
@@ -4,4 +4,4 @@
 todo
 
 * config
-- run to include git hooks `git config --local include.path ../.gitconfig`
+- run to include git hooks =git config --local include.path ../.gitconfig=
